hw3/hw3.txt

Q1. Why did Brady's patch remove the line - "case_long_iso_time_style:"? 
Was it necessary to remove that line? Explain.

Not necessary. 
case_long_iso_time_style: is just a direction for goto to follow, 
since no goto use this dir, it can be deleted but not necessary.


Q2. If your company adopts this patched version of Coreutils instead of the 
default one, what else should you watch out for? Might this new version of 
Coreutils introduce other problems with your application, perhaps in countries 
where users don't speak English and don't understand English-format dates?

The problem is the "dcgettext" function in the modified version of ls.c.
If no valid translation is found under the environment of a special locale, 
it will return long_time_format[i].


Q3. What happens when this script is invoked on an empty file like /dev/null, 
and why?

$ python randline.py /dev/null
Traceback (most recent call last):
  File "randline.py", line 70, in <module>
    main()
  File "randline.py", line 64, in main
    sys.stdout.write(generator.chooseline())
  File "randline.py", line 34, in chooseline
    return random.choice(self.lines)
  File "/usr/lib64/python2.7/random.py", line 274, in choice
    return seq[int(self.random() * len(seq))]  
    # raises IndexError if seq is empty
IndexError: list index out of range

Trace the error message from the top to the bottom, we can identify that it is 
the random.py that the randline.py imports causes the problem. I open the 
/usr/lib64/python2.7/random.py and go to line 274. 

def choice(self, seq):
    """Choose a random element from a non-empty sequence."""
    return seq[int(self.random() * len(seq))]  
    # raises IndexError if seq is empty seq cannot access a empty file

Hence, when seq, (in this case, which is the only argument /dev/null) is empty,
seq[...] will be meaningly. 


Q4. What happens when this script is invoked with Python 3 rather than 
Python 2, and why? (You can run Python 3 on the SEASnet hosts by using 
the command python3 instead of python.)

first to add /usr/local/cs/bin to the $PATH
$ export PATH=$PATH:/usr/local/cs/bin

then invoke randline.py with python3
$ python3 randline.py tmp.txt
  File "randline.py", line 65
    except IOError as (errno, strerror):
                      ^
SyntaxError: invalid syntax

The SyntaxError is caused by the difference between the syntax of python2 & 3.
In Python3, cannot read an exception as a tuple